<resources>
    <string name="app_name">FocusClock</string>
    <string name="am">AM</string>
    <string name="_00">00</string>
    <string name="_8">8</string>
    <string name="_59">59</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pm">PM</string>
    <string name="_25">25</string>
</resources>